--- a/src/main/resources/templates/admin/brand/disabledBrand.html
+++ b/src/main/resources/templates/admin/brand/disabledBrand.html
@@ -97,7 +97,7 @@
                                         <div th:each="brand,item:${brands}">
                                             <tr th:name="*{brand.id}">
                                                 <td th:text="*{item.index+1}"></td>
-                                                <td><img width="150" th:src="@{|/uploads/*{brand.image}|}"
+                                                <td><img width="150" th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${brand.image}+'?alt=media'}"
                                                          alt="Not found img"></td>
                                                 <td th:text="*{brand.brandName}"></td>
                                                 <td th:text="*{brand.email}"></td>
