--- a/src/main/resources/templates/admin/inforAdmin/adminProfile.html
+++ b/src/main/resources/templates/admin/inforAdmin/adminProfile.html
@@ -51,7 +51,7 @@
                     <div class="user_profile_top_bg"></div>
                     <div class="user_profile_top_des">
                         <div class="user_profile_img">
-                            <img width="180" height="200" th:src="@{|/uploads/*{aUserResponse.image}|}" alt="Dont have image">
+                            <img width="180" height="200" th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${aUserResponse.image}+'?alt=media'}" alt="Dont have image">
                         </div>
                         <div class="user_profile_text_top">
                             <h3 th:text="*{aUserResponse.fullName}"></h3>
@@ -99,27 +99,27 @@
                                                 <h3>Mạng xã hội</h3>
                                                 <ul>
                                                     <li>
-                                                        <a href="#"
+                                                        <a href="https://www.instagram.com/hai_ng.611/"
                                                            class="mb-1 btn btn-outline btn-twitter rounded-circle">
-                                                            <i class="mdi mdi-twitter"></i>
+                                                            <i class="mdi mdi-instagram"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#"
+                                                        <a href="https://www.youtube.com/channel/UChT7bozfhONtlfYBbi-Ha1w"
                                                            class="mb-1 btn btn-outline btn-linkedin rounded-circle">
-                                                            <i class="mdi mdi-linkedin"></i>
+                                                            <i class="mdi mdi-youtube"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#"
+                                                        <a href="https://www.facebook.com/haidzaivl.611/"
                                                            class="mb-1 btn btn-outline btn-facebook rounded-circle">
                                                             <i class="mdi mdi-facebook"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#"
+                                                        <a href="https://mail.google.com/mail/u/0/?pli=1#inbox"
                                                            class="mb-1 btn btn-outline btn-skype rounded-circle">
-                                                            <i class="mdi mdi-skype"></i>
+                                                            <i class="mdi mdi-gmail"></i>
                                                         </a>
                                                     </li>
                                                 </ul>
