--- a/src/main/resources/templates/home/user/home.html
+++ b/src/main/resources/templates/home/user/home.html
@@ -341,7 +341,7 @@
                                                                                 <a th:href="@{/user/shop/productDetail/{id}(id=${productByNewest.id})}"
                                                                                    th:title="${productByNewest.productName}">
                                                                                     <img class="lazyload"
-                                                                                         th:src="@{|/uploads/*{productByNewest.image}|}"
+                                                                                         th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByNewest.image}+'?alt=media'}"
                                                                                          th:alt="${productByNewest.productName}">
                                                                                 </a>
                                                                             </div>
@@ -422,7 +422,7 @@
                                                                 <a th:href="@{/user/shop/productDetail/{id}(id=*{productByBestSelling.id})}"
                                                                    th:title="${productByBestSelling.productName}">
                                                                     <img class="lazyload"
-                                                                         th:src="@{|/uploads/*{productByBestSelling.image}|}"
+                                                                         th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByBestSelling.image}+'?alt=media'}"
                                                                          th:alt="${productByBestSelling.productName}">
                                                                 </a>
                                                             </div>
@@ -598,7 +598,7 @@
                                                         <div class="image">
                                                             <a th:href="@{/user/shop/productDetail/{id}(id=*{productByRandom1.id})}">
                                                                 <img class="lazyload"
-                                                                     th:src="@{|/uploads/*{productByRandom1.image}|}"
+                                                                     th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByRandom1.image}+'?alt=media'}"
                                                                      th:alt="*{productByRandom1.productName}">
                                                             </a>
                                                         </div>
@@ -639,7 +639,7 @@
                                                         <div class="image">
                                                             <a th:href="@{/user/shop/productDetail/{id}(id=*{productByRandom2.id})}">
                                                                 <img class="lazyload"
-                                                                     th:src="@{|/uploads/*{productByRandom2.image}|}"
+                                                                     th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByRandom2.image}+'?alt=media'}"
                                                                      th:alt="*{productByRandom2.productName}">
                                                             </a>
                                                         </div>
