--- a/src/main/resources/templates/home/permitAll/product/productDetailUser.html
+++ b/src/main/resources/templates/home/permitAll/product/productDetailUser.html
@@ -221,15 +221,15 @@
                             <div class="col-xs-12 col-sm-6 col-md-5">
                                 <div class="relative product-image-block ">
                                     <div class="large-image">
-                                        <a th:href="@{|/uploads/*{uProductResponse.image}|}"
+                                        <a th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${uProductResponse.image}+'?alt=media'}"
                                            data-rel="prettyPhoto[product-gallery]">
                                             <img id="zoom_01"
-                                                 th:src="@{|/uploads/*{uProductResponse.image}|}"
+                                                 th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${uProductResponse.image}+'?alt=media'}"
                                                  th:alt="*{uProductResponse.productName}">
                                         </a>
                                         <div class="hidden">
                                             <div class="item">
-                                                <a th:src="@{|/uploads/*{uProductResponse.image}|}"
+                                                <a th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${uProductResponse.image}+'?alt=media'}"
                                                    data-rel="prettyPhoto[product-gallery]" id="linkPic">
                                                 </a>
                                             </div>
@@ -335,7 +335,7 @@
                                                 <div class="image">
                                                     <a th:href="@{/shop/productDetail/{id}(id=*{product.id})}">
                                                         <img class="lazyload"
-                                                             th:src="@{|/uploads/*{product.image}|}"
+                                                             th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${product.image}+'?alt=media'}"
                                                              th:alt="*{product.productName}">
                                                     </a>
                                                 </div>
@@ -411,7 +411,7 @@
                                                             <div class="image">
                                                                 <a th:href="@{/user/shop/productDetail/{id}(id=*{productByRandom1.id})}">
                                                                     <img class="lazyload"
-                                                                         th:src="@{|/uploads/*{productByRandom1.image}|}"
+                                                                         th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByRandom1.image}+'?alt=media'}"
                                                                          th:alt="*{productByRandom1.productName}">
                                                                 </a>
                                                             </div>
@@ -452,7 +452,7 @@
                                                             <div class="image">
                                                                 <a th:href="@{/user/shop/productDetail/{id}(id=*{productByRandom2.id})}">
                                                                     <img class="lazyload"
-                                                                         th:src="@{|/uploads/*{productByRandom2.image}|}"
+                                                                         th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${productByRandom2.image}+'?alt=media'}"
                                                                          th:alt="*{productByRandom2.productName}">
                                                                 </a>
                                                             </div>
@@ -521,72 +521,6 @@
 
 
 </section>
-
-
-
-<div id="aweCallback">
-    <script>
-        var productJson = {
-            "id": 9491754,
-            "name": "Laptop Asus X453MA Ram 4Gb",
-            "alias": "laptop-asus-x453ma",
-            "vendor": "Asus",
-            "type": "Laptop",
-            "content": "<p style=\"text-align: justify;\">Asus X453MA-WX268D sở hữu thiết kế đơn giản, kiểu dáng mỏng gọn, nội thất sang trọng. Bạn sẽ cảm thấy hài lòng với vi xử lý mới của Intel cùng ổ cứng dung lượng lưu trữ lớn. Hệ thống loa SonicMaster được bổ sung để gia tăng cường âm thanh giải trí bên cạnh trải nghiệm khả năng truyền dữ liệu nhanh chóng với USB 3.0 tốc độ gấp 10 lần so với đời 2.0. Asus X453MA-WX268D còn có nhiều màu sắc tươi sáng và thời trang, giá cả hợp lý phù hợp với các học sinh, sinh viên.<br />\r\n<strong>TÍNH NĂNG NỔI BẬT</strong></p>\r\n\r\n<p style=\"text-align: center;\"><img src=\"//bizweb.dktcdn.net/thumb/large/100/005/399/files/laptop-asus-x453ma-wx268d-14inch-trang-8805-299649-2-zoom-min.jpg?v=1468898854179\" /></p>\r\n\r\n<p style=\"text-align: justify;\"><br />\r\n<strong>Hoạt động mượt mà cho công việc và giải trí hằng ngày</strong><br />\r\nLaptop Asus X453MA-WX268D được trang bị bộ xử lý Intel Celeron N2840 2.16GHz chạy đa nhiệm hiệu quả. Bộ xử lý tích hợp đồ họa Intel HD Graphics giúp phát mượt các bộ phim HD cũng như hình ảnh độ phân giải cao và rõ nét khi làm việc. Máy cũng có bộ nhớ RAM lớn 2GB sẽ hỗ trợ thực thi các tác vụ với tốc độ ổn định.<br />\r\n<strong>Công nghệ làm mát IceCool</strong><br />\r\nCông nghệ làm mát IceCool còn giữ cho chiếu nghỉ tay luôn mát mẻ và thoải mái ngay cả khi sử dụng trong khoảng thời gian dài.<br />\r\n<strong>Loa Altec Lansing và công nghệ âm thanh SonicMaster Lite</strong><br />\r\nCông nghệ âm thanh ASUS SonicMaster Lite cho hiệu suất âm thanh tốt hơn trên mỗi ứng dụng, bao gồm cả âm nhạc, phim ảnh hay chơi game; kết hợp với hệ thống loa Altec Lansing danh tiếng. Âm thanh phát ra trong rõ, tăng cường âm bass, đem đến những trải nghiệm chân thực hơn.<br />\r\n<strong>Thiết kế thời trang và mỏng gọn</strong></p>\r\n\r\n<p style=\"text-align: center;\"><img src=\"//bizweb.dktcdn.net/thumb/large/100/005/399/files/laptop-asus-x453ma-wx268d-14inch-trang-8805-299649-2-zoom-min-cb393b35-d7b6-49cd-94f4-34248fc90dfa.jpg?v=1468898871662\" /></p>\r\n\r\n<p style=\"text-align: justify;\"><br />\r\nVới kích thước vừa vặn, cân nặng chỉ khoảng 2.1kg, Asus X453MA-WX268D trông thật mỏng gọn và nhẹ nhàng. Máy đi kèm một Touchpad cảm ứng đa điểm đủ lớn để người dùng có thể dễ dàng thao tác, tích hợp cả hai nút chuột (trái, phải) trên bề mặt; và bàn phím chiclet có các phím rời có khoảng cách hợp lý, có độ đằm khi thao tác, đem đến sự dễ chịu cho đôi tay của bạn.<br />\r\n<strong>Khởi động nhanh, sao lưu tức thời</strong><br />\r\nNhờ công nghệ ASUS Super Hybrid Engine II, máy có thể nhanh chóng chuyển về chế độ “sleep” chỉ trong 2 giây, duy trì “standby” suốt 2 tuần. Đồng thời, máy sẽ tự sao lưu dữ liệu khi pin còn dưới 5% để bạn yên tâm hơn khi sử dụng mà không cắm dây sạc.<br />\r\n<strong>Giao tiếp USB 3.0</strong><br />\r\nGiao tiếp USB 3.0 mang nhiều ưu điểm vượt trội, cung cấp băng thông 5Gbps, nhanh hơn gấp 10 lần so với cổng USB 2.0, cho phép bạn trải nghiệm công nghệ truyền tải nội dung cực nhanh. USB 3.0 luôn cố gắng tiết kiệm pin và bảo vệ môi trường bằng cách ngắt hoặc tạm ngưng các thiết bị khi không còn được sử dụng.<br />\r\n<strong>Kết nối đa dạng, dễ dàng</strong><br />\r\nKết nối máy tính với HDTV chỉ bằng một đầu cáp duy nhất cho cả âm thanh và hình ảnh thông qua cổng HDMI chất lượng cao. Bên cạnh cổng USB 3.0 và cổng USB 2.0, máy còn được tích hợp webcam, Wifi 802.11 b/g/n, cổng cắm cáp RJ45 cho mạng WLAN, cổng mic và tai nghe.</p>",
-            "summary": "",
-            "template_layout": null,
-            "available": true,
-            "tags": [],
-            "price": 5200000.0000,
-            "price_min": 5200000.0000,
-            "price_max": 5200000.0000,
-            "price_varies": false,
-            "compare_at_price": 5500000.0000,
-            "compare_at_price_min": 5500000.0000,
-            "compare_at_price_max": 5500000.0000,
-            "compare_at_price_varies": false,
-            "variants": [{
-                "id": 15153426,
-                "barcode": "",
-                "sku": "",
-                "title": "Default Title",
-                "options": ["Default Title"],
-                "option1": "Default Title",
-                "option2": null,
-                "option3": null,
-                "available": true,
-                "taxable": false,
-                "price": 5200000.0000,
-                "compare_at_price": 5500000.0000,
-                "inventory_management": "",
-                "inventory_policy": "deny",
-                "inventory_quantity": 0,
-                "weight_unit": "kg",
-                "weight": 0,
-                "requires_shipping": true,
-                "image": null
-            }],
-            "featured_image": {"src": "https://bizweb.dktcdn.net/100/286/763/products/laptopasusx453mawx268d14inchtr.jpg?v=1514518042333"},
-            "images": [{"src": "https://bizweb.dktcdn.net/100/286/763/products/laptopasusx453mawx268d14inchtr.jpg?v=1514518042333"}, {"src": "https://bizweb.dktcdn.net/100/286/763/products/2088315172laptopasusk550lavxx4.jpg?v=1514518042333"}],
-            "options": ["Title"],
-            "created_on": "2017-12-29T10:27:22",
-            "modified_on": null,
-            "published_on": "2017-12-29T10:26:50"
-        };
-
-        var variantsize = false;
-
-        var alias = 'laptop-asus-x453ma';
-        var getLimit = 3;
-
-        var productOptionsSize = 1;
-        var optionsFirst = 'Title';
-
-
-        var cdefault = 1;
-
-    </script>
-</div>
 
 
 <div class="container">
