--- a/src/main/resources/templates/home/user/product/shopProductNoProduct.html
+++ b/src/main/resources/templates/home/user/product/shopProductNoProduct.html
@@ -188,7 +188,7 @@
                     <div class="image">
                         <a href="#">
                             <img class="img-responsive lazyload"
-                                 src="/uploads/img_1.png"
+                                 src="https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/img_1.png?alt=media"
                                  alt="banner danh sách sản phẩm">
                         </a>
                     </div>
