--- a/src/main/resources/templates/home/user/wishList/wishlist.html
+++ b/src/main/resources/templates/home/user/wishList/wishlist.html
@@ -224,7 +224,8 @@
                                         width="120"
                                         height="auto"
                                         th:alt="*{wishList.nameProduct}"
-                                        th:src="@{|/uploads/*{wishList.imageProduct}|}"></a>
+                                        th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${wishList.imageProduct}+'?alt=media'}"
+                                ></a>
                                 </div>
                                 <div style="width: 20%;align-items: flex-start;" class="a-center">
                                     <h2 class="product-name"><a
@@ -273,7 +274,7 @@
                                class="product-images1">
                                 <img max-width="80"
                                      th:alt="*{wishList.nameProduct}"
-                                     th:src="@{|/uploads/*{wishList.imageProduct}|}">
+                                     th:src="@{'https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/'+${wishList.imageProduct}+'?alt=media'}">
                             </a>
                         </div>
                         <div class="title-product-cart-mobile">
