--- a/src/main/resources/templates/admin/brand/addBrand.html
+++ b/src/main/resources/templates/admin/brand/addBrand.html
@@ -23,6 +23,8 @@
 	<!-- custom css -->
 	<link id="style.css" rel="stylesheet" href="/admin/css/style.css" />
 
+	<!-- FAVICON -->
+<!--	<link href="/admin/img/logo/icon.png" rel="shortcut icon" />-->
 
 </head>
 
@@ -98,9 +100,9 @@
 												<div class="ec-vendor-img-upload">
 													<div class="ec-vendor-main-img">
 														<div class="avatar-upload">
-															<div class="col-md-3 mb-3">
-																<img width="100%" id="previewImage">
-															</div>
+<!--															<div class="col-md-3 mb-3">-->
+<!--																<img width="100%" id="previewImage" src="">-->
+<!--															</div>-->
 															<div class="col-md-9 mb-3">
 																<label class="form-label">Hình ảnh</label>
 																<input type="file" class="form-control" th:name="imageBrand" onchange="handleInputImage()">
