--- a/src/main/resources/templates/admin/brand/addBrand.html
+++ b/src/main/resources/templates/admin/brand/addBrand.html
@@ -24,7 +24,7 @@
 	<link id="style.css" rel="stylesheet" href="/admin/css/style.css" />
 
 	<!-- FAVICON -->
-<!--	<link href="/admin/img/logo/icon.png" rel="shortcut icon" />-->
+	<link href="/admin/img/logo/icon.png" rel="shortcut icon" />
 
 </head>
 
