--- a/src/main/resources/templates/admin/category/disabledCategory.html
+++ b/src/main/resources/templates/admin/category/disabledCategory.html
@@ -128,14 +128,6 @@
                 </div>
             </div> <!-- End Content -->
         </div> <!-- End Content Wrapper -->
-        <!-- Footer -->
-        <footer class="footer mt-auto">
-            <div class="copyright bg-white">
-                <p>
-                    Copyright © 2023. All right reserved.
-                </p>
-            </div>
-        </footer>
 
     </div> <!-- End Page Wrapper -->
 
@@ -164,7 +156,21 @@
 <div th:replace="admin/fragments/changeStatus :: changeStatus"></div>
 
 </body>
-
+<script>
+    const badgeSpans = document.querySelectorAll('.badge');
+    badgeSpans.forEach(function (span) {
+        switch (span.textContent.trim()) {
+            case 'ACTIVE': {
+                span.textContent = "HOẠT ĐỘNG";
+                break;
+            }
+            case 'INACTIVE': {
+                span.textContent = "KHÔNG HOẠT ĐỘNG";
+                break;
+            }
+        }
+    });
+</script>
 
 <!-- Mirrored from andit.co/projects/html/andshop/andshop-dashboard/main-category.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Feb 2024 08:33:12 GMT -->
 </html>
