--- a/src/main/resources/templates/admin/invoice/mainInvoice.html
+++ b/src/main/resources/templates/admin/invoice/mainInvoice.html
@@ -87,7 +87,7 @@
 														<td th:text="*{invoice.serialNumber}"></td>
 														<td th:text="*{invoice.createdDate}"></td>
 														<td th:text="*{invoice.totalPrice}"></td>
-														<td> <span  class="badge" th:name="*{invoice.id}" th:text="*{invoice.statusInvoice}"></span> </td>
+														<td> <span  class="badge statusInvoice" th:id="*{invoice.id}" th:name="*{invoice.id}" th:text="*{invoice.statusInvoice}"></span> </td>
 														<td>
 															<div class="btn-group mb-1">
 																<a type="button"
@@ -99,12 +99,12 @@
 																	<span class="sr-only">Info</span>
 																</button>
 																<div class="dropdown-menu">
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('WAITING',this.getAttribute('name'))">WAITING</button>
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('CONFIRM',this.getAttribute('name'))">CONFIRM</button>
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('DELIVERY',this.getAttribute('name'))">DELIVERY</button>
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('SUCCESS',this.getAttribute('name'))">SUCCESS</button>
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('CANCEL',this.getAttribute('name'))">CANCEL</button>
-																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('DENIED',this.getAttribute('name'))">DENIED</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('WAITING',this.getAttribute('name'))">CHỜ XÁC NHẬN</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('CONFIRM',this.getAttribute('name'))">XÁC NHẬN</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('DELIVERY',this.getAttribute('name'))">ĐANG GIAO HÀNG</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('SUCCESS',this.getAttribute('name'))">THÀNH CÔNG</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('CANCEL',this.getAttribute('name'))">HỦY</button>
+																	<button class="dropdown-item" th:name="*{invoice.id}" onclick="changeStatusInvoice('DENIED',this.getAttribute('name'))">TỪ CHỐI</button>
 																</div>
 															</div>
 														</td>
@@ -119,16 +119,6 @@
 					</div>
 				</div> <!-- End Content -->
 			</div> <!-- End Content Wrapper -->
-
-			<!-- Footer -->
-			<footer class="footer mt-auto">
-				<div class="copyright bg-white">
-					<p>
-						Copyright © 2023. All right reserved.
-					</p>
-				</div>
-			</footer>
-
 		</div> <!-- End Page Wrapper -->
 	</div> <!-- End Wrapper -->
 
@@ -149,8 +139,38 @@
 
 	<!-- custom js -->
 	<script src="/admin/js/custom.js"></script>
+	<script>
+		const badgeSpans = document.querySelectorAll('.statusInvoice');
+		badgeSpans.forEach(function (span) {
+			switch (span.textContent.trim()) {
+				case 'WAITING': {
+					span.textContent = "CHỜ XÁC NHẬN";
+					break;
+				}
+				case 'SUCCESS': {
+					span.textContent = "THÀNH CÔNG";
+					break;
+				}
+				case 'DELIVERY': {
+					span.textContent = "ĐANG GIAO";
+					break;
+				}
+				case 'CONFIRM': {
+					span.textContent = "ĐÃ XÁC NHẬN";
+					break;
+				}
+				case 'CANCEL': {
+					span.textContent = "ĐÃ HỦY";
+					break;
+				}
+				case 'DENIED': {
+					span.textContent = "BỊ TỪ CHỐI";
+					break;
+				}
+			}
+		});
+	</script>
 	<div th:replace="admin/fragments/changeStatusInvoice :: changeStatusInvoice"></div>
-
 </body>
 
 
