--- a/src/main/resources/templates/admin/orders/orderConfirmed.html
+++ b/src/main/resources/templates/admin/orders/orderConfirmed.html
@@ -93,7 +93,7 @@
                                                 <td th:text="*{order.serialNumber}"></td>
                                                 <td th:text="*{order.createdDate}"></td>
                                                 <td th:text="*{order.totalPrice}"></td>
-                                                <td><span class="badge badge-success" th:name="*{order.id}"
+                                                <td><span class="badge badge-success statusOrder" th:name="*{order.id}"
                                                           th:text="*{order.statusOrder}"></span></td>
                                                 <td>
                                                     <div class="btn-group mb-1">
@@ -113,14 +113,6 @@
             </div> <!-- End Content -->
         </div> <!-- End Content Wrapper -->
 
-        <!-- Footer -->
-        <footer class="footer mt-auto">
-            <div class="copyright bg-white">
-                <p>
-                    Copyright © 2023. All right reserved.
-                </p>
-            </div>
-        </footer>
 
     </div> <!-- End Page Wrapper -->
 </div> <!-- End Wrapper -->
@@ -143,7 +135,21 @@
 <!-- custom js -->
 <script src="/admin/js/custom.js"></script>
 </body>
-
+<script>
+    const badgeSpans = document.querySelectorAll('.statusOrder');
+    badgeSpans.forEach(function (span) {
+        switch (span.textContent.trim()) {
+            case 'CONFIRMED': {
+                span.textContent = "ĐÃ DUYỆT";
+                break;
+            }
+            case 'UNCONFIRMED': {
+                span.textContent = "ĐỢI DUYỆT";
+                break;
+            }
+        }
+    });
+</script>
 
 <!-- Mirrored from andit.co/projects/html/andshop/andshop-dashboard/invoice.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Feb 2024 08:34:03 GMT -->
 </html>
