--- a/src/main/resources/templates/home/user/payment/payment.html
+++ b/src/main/resources/templates/home/user/payment/payment.html
@@ -10,12 +10,33 @@
 
     <link rel="stylesheet" href="https://bigshop-1.mysapo.net/dist/css/checkout.vendor.min.css?v=4fcd86c">
 
-
+    <link rel="stylesheet" href="/home/css/cssAlertSuccess.css">
     <link rel="stylesheet" href="https://bigshop-1.mysapo.net/dist/css/checkout.min.css?v=98da546">
 
     <!-- Begin checkout custom css -->
     <style>
-
+        .alertError{
+            -webkit-tap-highlight-color: transparent;
+            line-height: 1.7;
+            font-weight: 400;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-size-adjust: 100%;
+            font-size: 14px;
+            font-family: 'Arial', sans-serif;
+            box-sizing: border-box;
+            animation: autoHide 0s ease-in 4s forwards;
+            position: absolute;
+            z-index: 1;
+            top: 2%;
+            right: 20%;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 1px solid transparent;
+            border-radius: 4px;
+            background-color: #fcf8e3;
+            border-color: #faebcc;
+            color: #8a6d3b;
+        }
     </style>
     <!-- End checkout custom css -->
 
@@ -46,6 +67,9 @@
         </div>
     </div>
 </header>
+<div class="alert alertError alert-warning autoHide" th:if="${error}">
+    <strong>Warning!</strong> <span th:text="${error}"></span>
+</div>
 <aside>
     <button class="order-summary-toggle" data-toggle="#order-summary" data-toggle-class="order-summary--is-collapsed">
 			<span class="wrap">
