--- a/src/main/resources/templates/home/user/profile/historyInvoice.html
+++ b/src/main/resources/templates/home/user/profile/historyInvoice.html
@@ -213,7 +213,7 @@
                                                     <span  th:text="${invoice.totalPriceHaveShip}"></span>
                                                 </td>
                                                 <td>
-                                                    <span><b  th:text="${invoice.statusInvoice}"></b></span>
+                                                    <span><b  th:text="${invoice.statusInvoice}" class="statusInvoice"></b></span>
                                                 </td>
                                                 <td>
                                                     <span><a th:href="@{/user/invoiceDetail/{id}(id=${invoice.id})}">Xem</a></span>
@@ -490,7 +490,38 @@
         buyAgainButtons.forEach(button => {
             button.addEventListener('click', navigateToHref);
         });
+
+        const badgeSpans = document.querySelectorAll('.statusInvoice');
+        badgeSpans.forEach(function (span) {
+            switch (span.textContent.trim()) {
+                case 'WAITING': {
+                    span.textContent = "CHỜ XÁC NHẬN";
+                    break;
+                }
+                case 'SUCCESS': {
+                    span.textContent = "THÀNH CÔNG";
+                    break;
+                }
+                case 'DELIVERY': {
+                    span.textContent = "ĐANG GIAO HÀNG";
+                    break;
+                }
+                case 'CONFIRM': {
+                    span.textContent = "ĐÃ XÁC NHẬN";
+                    break;
+                }
+                case 'CANCEL': {
+                    span.textContent = "ĐÃ HỦY";
+                    break;
+                }
+                case 'DENIED': {
+                    span.textContent = "BỊ TỪ CHỐI";
+                    break;
+                }
+            }
+        });
     });
+
 </script>
 
 </body>
