--- a/src/main/resources/templates/home/permitAll/product/shopProduct.html
+++ b/src/main/resources/templates/home/permitAll/product/shopProduct.html
@@ -408,11 +408,11 @@
                                        th:attr="name=${brandId != null ? 'brandId' : null}, value=${brandId != null ? brandId : null}"/>
                                 <div id='slider'></div>
                                 <div id='start'><input name="startPrice" class="startPrice" value="0"></div>
-                                <div id='stop'><input name="endPrice"  class="endPrice" value="100000000₫"></div>
+                                <div id='stop'><input name="endPrice"  class="endPrice" value="100.000.000₫"></div>
                                 <input type="hidden" th:attr="name=${filter != null ? 'filter' : null}, value=${filter != null ? filter : null}" />
                                 <a id="old-value" href="javascript:;"></a>
                                 <button id="filter-value" class="btn btn-primary" href="javascript:;" type="submit"
-                                        data-value="(>-1 AND <10000001)">Lọc giá
+                                        data-value="(>-1 AND <100000001)">Lọc giá
                                 </button>
                             </form>
                         </div>
