--- a/src/main/resources/templates/home/permitAll/product/shopProductNoProduct.html
+++ b/src/main/resources/templates/home/permitAll/product/shopProductNoProduct.html
@@ -177,7 +177,7 @@
                     <div class="image">
                         <a href="#">
                             <img class="img-responsive lazyload"
-                                 src="/uploads/img_1.png"
+                                 src="https://firebasestorage.googleapis.com/v0/b/project-fcfdd.appspot.com/o/img_1.png?alt=media"
                                  alt="banner danh sách sản phẩm">
                         </a>
                     </div>
