--- a/src/main/resources/templates/home/user/product/productDetailUser.html
+++ b/src/main/resources/templates/home/user/product/productDetailUser.html
@@ -169,7 +169,7 @@
             <div class="col-xs-12">
                 <ul class="breadcrumb">
                     <li class="home">
-                        <a href="/user"><span>Trang chủ</span></a>
+                        <a href="/user/home"><span>Trang chủ</span></a>
                         <span> / </span>
                     </li>
                     <li>
