--- a/src/main/resources/templates/home/user/payment/payment.html
+++ b/src/main/resources/templates/home/user/payment/payment.html
@@ -61,7 +61,7 @@
         <div class="logo logo--left">
 
             <h1 class="shop__name">
-                <a href="/">Bigshop</a>
+                <a href="/user/home">Bigshop</a>
             </h1>
 
         </div>
