--- a/src/main/resources/templates/home/user/product/searchProductNoProduct.html
+++ b/src/main/resources/templates/home/user/product/searchProductNoProduct.html
@@ -163,7 +163,7 @@
             <div class="col-xs-12">
                 <ul class="breadcrumb">
                     <li class="home">
-                        <a href="/user"><span>Trang chủ</span></a>
+                        <a href="/user/home"><span>Trang chủ</span></a>
                         <span> / </span>
                     </li>
                     <li><strong>Kết quả tìm kiếm với từ khóa " <span th:text="${keyword}"></span>"</strong></li>
