--- a/src/main/resources/templates/home/user/product/shopProduct.html
+++ b/src/main/resources/templates/home/user/product/shopProduct.html
@@ -14,7 +14,6 @@
 
     <!-- ================= Meta ================== -->
     <meta name="keywords" content="Tất cả sản phẩm, Bigshop, bigshop-1.mysapo.net"/>
-    <link rel="canonical" href="all.html"/>
     <meta name='revisit-after' content='1 days'/>
     <meta name="robots" content="noodp,index,follow"/>
     <!-- ================= Favicon ================== -->
@@ -167,7 +166,7 @@
             <div class="col-xs-12">
                 <ul class="breadcrumb">
                     <li class="home">
-                        <a href="/user"><span>Trang chủ</span></a>
+                        <a href="/user/home"><span>Trang chủ</span></a>
                         <span> / </span>
                     </li>
                     <li><strong><span> Tất cả sản phẩm</span></strong></li>
