--- a/src/main/resources/templates/admin/users/mainUser.html
+++ b/src/main/resources/templates/admin/users/mainUser.html
@@ -130,7 +130,7 @@
 	function changeColor() {
 		const badgeSpans = document.querySelectorAll('#responsive-data-table .badge');
 		badgeSpans.forEach(function(span) {
-			if (span.textContent.trim() === 'ACTIVE') {
+			if (span.textContent.trim() === 'HOẠT ĐỘNG') {
 				span.classList.remove('badge-danger');
 				span.classList.add('badge-success');
 			} else {
